--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "knitz-michael-webdev",
-  "version": "1.0.0",
-  "description": "cs5610 assignments and project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mikeknitz/knitz-michael-webdev.git"
-  },
-  "author": "Michael Knitz",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mikeknitz/knitz-michael-webdev/issues"
-  },
-  "homepage": "https://github.com/mikeknitz/knitz-michael-webdev#readme"
+	"name": "knitz-michael-webdev",
+	"version": "1.0.0",
+	"description": "cs5610 assignments and project",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/mikeknitz/knitz-michael-webdev.git"
+	},
+	"author": "Michael Knitz",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/mikeknitz/knitz-michael-webdev/issues"
+	},
+	"homepage": "https://github.com/mikeknitz/knitz-michael-webdev#readme"
 }
