--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "web-dev",
-  "version": "1.0.0",
-  "description": "Web Dev at Northeastern University",
-  "main": "server.js",
-  "dependencies": {
-    "body-parser": "^1.15.1",
-    "express": "^4.13.4",
-    "mongoose": "^4.4.15"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "Michael Knitz",
-  "license": "ISC"
+	"name": "web-dev",
+	"version": "1.0.0",
+	"description": "Web Dev at Northeastern University",
+	"main": "server.js",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/mikeknitz/knitz-michael-webdev.git"
+	},
+	"dependencies": {
+		"body-parser": "^1.15.1",
+		"express": "^4.13.4",
+		"mongoose": "^4.4.15"
+	},
+	"devDependencies": {},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js"
+	},
+	"author": "Michael Knitz",
+	"license": "ISC"
 }
