--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Jose G. Annunziato",
+  "author": "Mike Knitz",
   "license": "ISC"
 }
