added sortable widgets in list

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ public/angular.js
 public/angular-route.js
 public/bootstrap.css
 public/jquery-1.12.4.js
+public/jquery-ui.css
+public/jquery-ui.js
 public/fonts/
