--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "mongoose": "^4.4.15",
+    "multer": "^1.2.0",
     "node.extend": "^1.1.6"
   },
   "devDependencies": {},
